--- a/css/styles.css
+++ b/css/styles.css
@@ -16,3 +16,13 @@ body{
     align-items: center;
     background-color: rgb(209, 116, 240);
 }
+
+#cabecera{
+    color:white;
+    background-color: blueviolet;
+    font-size: 25px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: flex;
+    align-self: center;
+
+}
