Se realizaron cambios en la cabecera y en el body en cssgit merge master

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,7 @@
 body{
     background-color:rgb(245, 229, 231);
-    
     font-family:Georgia, 'Times New Roman', Times, serif;
-    color: aquamarine;
+    color: white;
 }
 
 #contenedor{
